--- a/ANALYSIS/analyze_render_and_annotate_visible_seam.ipynb
+++ b/ANALYSIS/analyze_render_and_annotate_visible_seam.ipynb
@@ -928,7 +928,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from pyg.utils "
+   ]
   },
   {
    "cell_type": "code",
