--- a/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
+++ b/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
@@ -58,7 +58,7 @@
     "    # TODO: 2024.01.16 이후 Arc에 대한 정보에 대해 Bezier Curve로 변환예정.\n",
     "    # -> 일단 되게 끔 하는게 목표.\n",
     "    # 대상 열 목록\n",
-    "    coordinate_columns = [\"start\",  \"controla\", \"controlb\", \"control1\", \"control2\", \"radius\", \"end\"] \n",
+    "    coordinate_columns = [\"start\",  \"controla\", \"controlb\", \"control1\", \"control2\",  \"end\"] \n",
     "    \n",
     "    # 실수부와 허수부를 분리하여 새로운 열로 추가하는 함수\n",
     "    def extract_coordinates(df, columns):\n",
@@ -66,6 +66,7 @@
     "            df[f\"{col}_x\"] = df[col].apply(lambda z: z.real if isinstance(z, complex) else None)\n",
     "            df[f\"{col}_y\"] = df[col].apply(lambda z: z.imag if isinstance(z, complex) else None)\n",
     "        # TODO: x, y 좌표를 상하 반전\n",
+    "        # minimize\n",
     "        max_y = df[['start_y', 'controla_y', 'controlb_y', 'control1_y', 'control2_y', 'end_y']].max().max()\n",
     "        min_y = df[['start_y', 'controla_y', 'controlb_y', 'control1_y', 'control2_y', 'end_y']].min().min()\n",
     "        min_x = df[['start_x', 'controla_x', 'controlb_x', 'control1_x', 'control2_x', 'end_x']].min().min()\n",
@@ -74,10 +75,9 @@
     "        stand_y = (max_y + min_y)\n",
     "        stand_x = (max_x + min_x)\n",
     "        for col in columns: \n",
-    "            df[f\"{col}_y\"] = stand_y - df[f\"{col}_y\"]\n",
-    "            df[f\"{col}_x\"] = stand_x - df[f\"{col}_x\"]\n",
+    "            df[f\"{col}_y\"] = (stand_y - df[f\"{col}_y\"]) * 10 #TODO: 01.17 scaling까지 \n",
+    "            df[f\"{col}_x\"] = (stand_x - df[f\"{col}_x\"]) * 10 #TODO: scaling까지 \n",
     "        df['controlb_x'] = df['controla_x'].round(4) # TODO: ontrolb_x 에 round\n",
-    "        df.iloc[:,1:] = df.iloc[:,1:]*10 # scaling\n",
     "        # TODO: 여기까지\n",
     "        return df\n",
     "    \n",
@@ -96,6 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Bezier Curve로 Arc 변환하는건데 아직 적용안함\n",
     "import numpy as np\n",
     "\n",
     "def arc_to_bezier(arc):\n",
@@ -111,7 +112,6 @@
     "    start = arc[\"start\"]\n",
     "    end = arc[\"end\"]\n",
     "    radius = arc[\"radius\"].real  # 반지름의 실수부 사용\n",
-    "    rotation = arc[\"rotation\"]\n",
     "    large_arc = arc[\"large_arc\"]\n",
     "    sweep = arc[\"sweep\"]\n",
     "\n",
@@ -236,9 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'drawn_pattern_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# 패널 데이터프레임 생성\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m panel_dataframes \u001b[38;5;241m=\u001b[39m [process_path_data(drawn_pattern) \u001b[38;5;28;01mfor\u001b[39;00m drawn_pattern \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdrawn_pattern_list\u001b[49m]\n\u001b[1;32m     17\u001b[0m panel_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(pattern\u001b[38;5;241m.\u001b[39mpanel_order())\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Initialize the top-level JSON structure\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'drawn_pattern_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 3번\n",
     "### 원래꺼 \n",
@@ -311,10 +323,12 @@
     "    for edge_idx, row in df.iterrows():\n",
     "        line_id = f\"{panel_name}_edge_{edge_idx}\"\n",
     "        point_list = []\n",
-    "        if row[\"type\"] == \"Bezier Curve\":\n",
+    "        columns_x = [col for col in row.index if col.endswith('_x')]\n",
+    "        columns_y = [col for col in row.index if col.endswith('_y')]\n",
+    "        if row[\"type\"] == \"Bezier Curve\" or row[\"type\"] == \"Arc\":\n",
     "            row_type = [\"Straight\", \"Bezier Curve\", \"Bezier Curve\", \"Straight\"]\n",
     "            idx = 0\n",
-    "            for col_x, col_y in zip(row.index[1::2], row.index[2::2]):  # Skip 'type' and go by pairs\n",
+    "            for col_x, col_y in zip(columns_x, columns_y):  # Skip 'type' and go by pairs\n",
     "                x, y = row[col_x], row[col_y]\n",
     "                if not (pd.isna(x) or pd.isna(y)):#TODO: or math.isclose(x, 0.0) and math.isclose(y, 0.0) ):\n",
     "                    # 좌표에 대해 새로운 ID 생성 (패널 내에서만)\n",
@@ -324,16 +338,24 @@
     "                        point_counter += 1\n",
     "                    point_id = coordinate_id_map[key]\n",
     "                    \n",
-    "                    point_list.append({\n",
-    "                        \"ID\": point_id, \n",
-    "                        \"PointType\": row_type[idx],\n",
-    "                        \"Position\": {\"x\": x, \"y\": y},\n",
-    "                        \"GradingRuleID\": -1\n",
-    "                    })\n",
+    "                    if row[\"type\"] == \"Bezier Curve\":\n",
+    "                        point_list.append({\n",
+    "                            \"ID\": point_id, \n",
+    "                            \"PointType\": row_type[idx],\n",
+    "                            \"Position\": {\"x\": x, \"y\": y},\n",
+    "                            \"GradingRuleID\": -1\n",
+    "                        })\n",
+    "                    elif row[\"type\"] == \"Arc\":\n",
+    "                        point_list.append({\n",
+    "                            \"ID\": point_id, \n",
+    "                            \"PointType\": row_type[idx]@Arc_type,\n",
+    "                            \"Position\": {\"x\": x, \"y\": y},\n",
+    "                            \"GradingRuleID\": -1\n",
+    "                        })\n",
     "                    idx +=1        \n",
-    "        if row[\"type\"] == \"Straight\":\n",
+    "        elif row[\"type\"] == \"Straight\":\n",
     "            # Iterate through columns 2 by 2 for x and y\n",
-    "            for col_x, col_y in zip(row.index[1::2], row.index[2::2]):  # Skip 'type' and go by pairs\n",
+    "            for col_x, col_y in zip(columns_x, columns_y):  # Skip 'type' and go by pairs\n",
     "                x, y = row[col_x], row[col_y]\n",
     "                if not (pd.isna(x) or pd.isna(y)):#TODO: or math.isclose(x, 0.0) and math.isclose(y, 0.0) ):\n",
     "                    # 좌표에 대해 새로운 ID 생성 (패널 내에서만)\n",
@@ -349,6 +371,7 @@
     "                        \"Position\": {\"x\": x, \"y\": y},\n",
     "                        \"GradingRuleID\": -1\n",
     "                    })\n",
+    "    \n",
     "\n",
     "        # Add Line to LineList\n",
     "        line = {\"ID\": line_id, \"PointList\": point_list}\n",
@@ -480,7 +503,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.20"
   }
  },
