--- a/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
+++ b/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
@@ -49,7 +49,7 @@
     "        \"QuadraticBezier\": \"Bezier Curve\",\n",
     "        \"CubicBezier\": \"Bezier Curve\",\n",
     "        \"Line\": \"Straight\",\n",
-    "        \"Arc\": \"Bezier Curve\", #임의로 바꿈    \n",
+    "        \"Arc\": \"Arc\", #임의로 바꿈    \n",
     "    }\n",
     "    \n",
     "    # type 열 값 변경\n",
@@ -76,7 +76,7 @@
     "        stand_x = (max_x + min_x)\n",
     "        for col in columns: \n",
     "            df[f\"{col}_y\"] = (stand_y - df[f\"{col}_y\"]) * 10 #TODO: 01.17 scaling까지 \n",
-    "            df[f\"{col}_x\"] = (stand_x - df[f\"{col}_x\"]) * 10 #TODO: scaling까지 \n",
+    "            df[f\"{col}_x\"] = df[f\"{col}_x\"]* 10 #TODO: scaling까지 \n",
     "        df['controlb_x'] = df['controla_x'].round(4) # TODO: ontrolb_x 에 round\n",
     "        # TODO: 여기까지\n",
     "        return df\n",
@@ -96,31 +96,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Bezier Curve로 Arc 변환하는건데 아직 적용안함\n",
+    "# TODO:아래에 해당하는 arc_to_bezier는 개구려서 새로 만든거임\n",
     "import numpy as np\n",
     "\n",
-    "def arc_to_bezier(arc):\n",
+    "def arc_to_single_control_bezier(arc):\n",
     "    \"\"\"\n",
-    "    Arc 데이터를 단일 Bezier Curve로 변환합니다.\n",
+    "    Arc 데이터를 단일 Control Point를 가진 Bezier Curve로 변환합니다.\n",
     "    \n",
     "    Args:\n",
-    "        arc (dict): Arc 데이터 (start, radius, rotation, large_arc, sweep, end 포함).\n",
+    "        arc (dict): Arc 데이터 (start_x, start_y, end_x, end_y, radius, large_arc, sweep 포함).\n",
     "    \n",
     "    Returns:\n",
-    "        dict: Bezier Curve의 시작점, 끝점, 제어점 2개.\n",
+    "        dict: Bezier Curve의 시작점, 끝점, 제어점 1개.\n",
     "    \"\"\"\n",
-    "    start = arc[\"start\"]\n",
-    "    end = arc[\"end\"]\n",
-    "    radius = arc[\"radius\"].real  # 반지름의 실수부 사용\n",
+    "    # 시작점과 끝점 정의\n",
+    "    start_x, start_y = arc[\"start_x\"], arc[\"start_y\"]\n",
+    "    end_x, end_y = arc[\"end_x\"], arc[\"end_y\"]\n",
+    "    radius = arc[\"radius\"]  # 반지름\n",
     "    large_arc = arc[\"large_arc\"]\n",
     "    sweep = arc[\"sweep\"]\n",
     "\n",
-    "    # 중심 계산\n",
-    "    center = start + (end - start) / 2\n",
+    "    # 시작점과 끝점을 복소수로 변환\n",
+    "    start = np.array([start_x, start_y])\n",
+    "    end = np.array([end_x, end_y])\n",
     "\n",
-    "    # 시작 및 끝 각도 계산\n",
-    "    theta_start = np.angle(start - center)\n",
-    "    theta_end = np.angle(end - center)\n",
+    "    # 중심 계산\n",
+    "    center = (start + end) / 2\n",
+    "    cx, cy = center[0], center[1]\n",
+    "\n",
+    "    # 각도 계산\n",
+    "    theta_start = np.arctan2(start_y - cy, start_x - cx)\n",
+    "    theta_end = np.arctan2(end_y - cy, end_x - cx)\n",
     "\n",
     "    # sweep 및 large_arc 처리\n",
     "    if not sweep:\n",
@@ -128,45 +134,122 @@
     "    if large_arc and abs(theta_end - theta_start) < np.pi:\n",
     "        theta_end += 2 * np.pi\n",
     "\n",
-    "    # 각도 차이 계산\n",
-    "    delta_theta = theta_end - theta_start\n",
+    "    # 중간 각도 계산\n",
+    "    theta_m = (theta_start + theta_end) / 2  # 중간 각도\n",
     "\n",
-    "    # 제어점 비율 계산\n",
-    "    k = (4 / 3) * np.tan(delta_theta / 4)\n",
+    "    # Control Point 계산 (중간 각도 기준)\n",
+    "    control_x = cx + radius * np.cos(theta_m)\n",
+    "    control_y = cy + radius * np.sin(theta_m)\n",
+    "    control_point = np.array([control_x, control_y])\n",
     "\n",
-    "    # 시작점, 끝점 계산\n",
-    "    P0 = start\n",
-    "    P3 = end\n",
+    "    # Control Point를 직선(start-end) 기준으로 대칭 변환\n",
+    "    def reflect_point_over_line(p, p0, p1):\n",
+    "        # 직선 벡터\n",
+    "        line_vec = p1 - p0\n",
+    "        line_vec /= np.linalg.norm(line_vec)  # 정규화\n",
+    "        # 점과 직선의 수직 대칭 계산\n",
+    "        proj = np.dot(p - p0, line_vec) * line_vec\n",
+    "        reflection = 2 * proj - (p - p0)\n",
+    "        return p0 + reflection\n",
     "\n",
-    "    # 제어점 계산\n",
-    "    P1 = P0 + k * radius * 1j * np.exp(1j * theta_start)\n",
-    "    P2 = P3 - k * radius * 1j * np.exp(1j * theta_end)\n",
+    "    # Control Point 대칭\n",
+    "    control_reflected = reflect_point_over_line(control_point, start, end)\n",
     "\n",
     "    # 반환 형식\n",
     "    return {\n",
-    "        \"start\": (P0.real, P0.imag),\n",
-    "        \"control1\": (P1.real, P1.imag),\n",
-    "        \"control2\": (P2.real, P2.imag),\n",
-    "        \"end\": (P3.real, P3.imag),\n",
+    "        \"start_x\": start_x, \"start_y\": start_y,\n",
+    "        \"control1_x\": control_reflected[0], \"control1_y\": control_reflected[1],\n",
+    "        \"control2_x\": control_reflected[0].round(4), \"control2_y\": control_reflected[1],\n",
+    "        \"end_x\": end_x, \"end_y\": end_y,\n",
     "    }\n",
     "\n",
-    "\n",
-    "# 예제 Arc 데이터\n",
-    "arc = {\n",
-    "    \"start\": 26.0823 + 12.0083j,\n",
-    "    \"radius\": 10.8777 + 10.8777j,\n",
-    "    \"rotation\": 0,\n",
-    "    \"large_arc\": False,\n",
-    "    \"sweep\": True,\n",
-    "    \"end\": 15.2635 + 0j,\n",
-    "}\n",
+    "# # 테스트 데이터\n",
+    "# arc_data = {\n",
+    "#     \"start_x\": 130.1925,\n",
+    "#     \"start_y\": 398.36598,\n",
+    "#     \"end_x\": 238.3805,\n",
+    "#     \"end_y\": 298.021843,\n",
+    "#     \"radius\": 108.49457592383715,  # 반지름\n",
+    "#     \"large_arc\": False,\n",
+    "#     \"sweep\": True,\n",
+    "# }\n",
     "\n",
     "# 변환 실행\n",
-    "bezier_curve = arc_to_bezier(arc)\n",
+    "bezier_curve_data = arc_to_single_control_bezier(arc_data)\n",
     "\n",
     "# 결과 출력\n",
-    "for key, value in bezier_curve.items():\n",
-    "    print(f\"{key}: {value}\")"
+    "print(\"Converted Bezier Curve Data:\")\n",
+    "print(bezier_curve_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 일단 안씀\n",
+    "# # TODO: Bezier Curve로 Arc 변환하는건데 개구림\n",
+    "# import numpy as np\n",
+    "\n",
+    "# def arc_to_bezier(arc):\n",
+    "#     \"\"\"\n",
+    "#     Arc 데이터를 단일 Bezier Curve로 변환합니다.\n",
+    "    \n",
+    "#     Args:\n",
+    "#         arc (dict): Arc 데이터 (start_x, start_y, radius, rotation, large_arc, sweep, end_x, end_y 포함).\n",
+    "    \n",
+    "#     Returns:\n",
+    "#         dict: Bezier Curve의 시작점, 끝점, 제어점 2개.\n",
+    "#     \"\"\"\n",
+    "#     # 시작점과 끝점 정의\n",
+    "#     start_x, start_y = arc[\"start_x\"], arc[\"start_y\"]\n",
+    "#     end_x, end_y = arc[\"end_x\"], arc[\"end_y\"]\n",
+    "#     radius = arc[\"radius\"]  # 반지름\n",
+    "#     large_arc = arc[\"large_arc\"]\n",
+    "#     sweep = arc[\"sweep\"]\n",
+    "\n",
+    "#     # 시작점과 끝점을 복소수로 변환\n",
+    "#     start = complex(start_x, start_y)\n",
+    "#     end = complex(end_x, end_y)\n",
+    "\n",
+    "#     # 중심 계산\n",
+    "#     center = start + (end - start) / 2\n",
+    "\n",
+    "#     # 시작 및 끝 각도 계산\n",
+    "#     theta_start = np.angle(start - center)\n",
+    "#     theta_end = np.angle(end - center)\n",
+    "\n",
+    "#     # sweep 및 large_arc 처리\n",
+    "#     if not sweep:\n",
+    "#         theta_start, theta_end = theta_end, theta_start\n",
+    "#     if large_arc and abs(theta_end - theta_start) < np.pi:\n",
+    "#         theta_end += 2 * np.pi\n",
+    "\n",
+    "#     # 각도 차이 계산\n",
+    "#     delta_theta = theta_end - theta_start\n",
+    "\n",
+    "#     # 제어점 비율 계산\n",
+    "#     k = (4 / 3) * np.tan(delta_theta / 4)\n",
+    "\n",
+    "#     # 시작점, 끝점 계산\n",
+    "#     P0_x, P0_y = start_x, start_y\n",
+    "#     P3_x, P3_y = end_x, end_y\n",
+    "\n",
+    "#     # 제어점 계산\n",
+    "#     P1_x = P0_x + k * radius * np.cos(theta_start)\n",
+    "#     P1_y = P0_y + k * radius * np.sin(theta_start)\n",
+    "\n",
+    "#     P2_x = P3_x - k * radius * np.cos(theta_end)\n",
+    "#     P2_y = P3_y - k * radius * np.sin(theta_end)\n",
+    "\n",
+    "#     # 반환 형식\n",
+    "#     return {\n",
+    "#         \"start_x\": P0_x, \"start_y\": P0_y,\n",
+    "#         \"control1_x\": P1_x.real, \"control1_y\": P1_y.real, #TODO: 허수부 제거\n",
+    "#         \"control2_x\": P2_x.real, \"control2_y\": P2_y.real,\n",
+    "#         \"end_x\": P3_x, \"end_y\": P3_y,\n",
+    "#     }\n"
    ]
   },
   {
@@ -325,7 +408,8 @@
     "        point_list = []\n",
     "        columns_x = [col for col in row.index if col.endswith('_x')]\n",
     "        columns_y = [col for col in row.index if col.endswith('_y')]\n",
-    "        if row[\"type\"] == \"Bezier Curve\" or row[\"type\"] == \"Arc\":\n",
+    "        \n",
+    "        if row[\"type\"] == \"Bezier Curve\":\n",
     "            row_type = [\"Straight\", \"Bezier Curve\", \"Bezier Curve\", \"Straight\"]\n",
     "            idx = 0\n",
     "            for col_x, col_y in zip(columns_x, columns_y):  # Skip 'type' and go by pairs\n",
@@ -338,21 +422,44 @@
     "                        point_counter += 1\n",
     "                    point_id = coordinate_id_map[key]\n",
     "                    \n",
-    "                    if row[\"type\"] == \"Bezier Curve\":\n",
-    "                        point_list.append({\n",
-    "                            \"ID\": point_id, \n",
-    "                            \"PointType\": row_type[idx],\n",
-    "                            \"Position\": {\"x\": x, \"y\": y},\n",
-    "                            \"GradingRuleID\": -1\n",
-    "                        })\n",
-    "                    elif row[\"type\"] == \"Arc\":\n",
-    "                        point_list.append({\n",
-    "                            \"ID\": point_id, \n",
-    "                            \"PointType\": row_type[idx]@Arc_type,\n",
-    "                            \"Position\": {\"x\": x, \"y\": y},\n",
-    "                            \"GradingRuleID\": -1\n",
-    "                        })\n",
-    "                    idx +=1        \n",
+    "                    point_list.append({\n",
+    "                        \"ID\": point_id, \n",
+    "                        \"PointType\": row_type[idx],\n",
+    "                        \"Position\": {\"x\": x, \"y\": y},\n",
+    "                        \"GradingRuleID\": -1\n",
+    "                    })\n",
+    "                    idx +=1 \n",
+    "        # TODO: Arc 타입에 대해 베지어로 변환하여 Json에 넣는 작업.\n",
+    "        elif row[\"type\"] == \"Arc\":\n",
+    "            arc_bezier = arc_to_bezier(row)\n",
+    "            columns_x = [key for key in row.keys() if key.endswith('_x')]\n",
+    "            columns_y = [key for key in row.keys() if key.endswith('_y')]\n",
+    "            # 사용하지 않을 키 필터링\n",
+    "            excluded_keys = {\"controla_x\", \"controlb_x\", \"controla_y\", \"controlb_y\"}\n",
+    "            columns_x = [col for col in columns_x if col not in excluded_keys]\n",
+    "            columns_y = [col for col in columns_y if col not in excluded_keys]\n",
+    "            print(columns_x, columns_y)\n",
+    "            \n",
+    "            row_type = [\"Straight\", \"Bezier Curve\", \"Bezier Curve\", \"Straight\"]\n",
+    "            idx = 0\n",
+    "            for col_x, col_y in zip(columns_x, columns_y):  # Skip 'type' and go by pairs\n",
+    "                print(arc_bezier[col_x], arc_bezier[col_y])\n",
+    "                x, y = arc_bezier[col_x], arc_bezier[col_y]\n",
+    "                if not (pd.isna(x) or pd.isna(y)):#TODO: or math.isclose(x, 0.0) and math.isclose(y, 0.0) ):\n",
+    "                    # 좌표에 대해 새로운 ID 생성 (패널 내에서만)\n",
+    "                    key = (x, y)\n",
+    "                    if key not in coordinate_id_map:\n",
+    "                        coordinate_id_map[key] = f\"{panel_name}_point_{point_counter}\"\n",
+    "                        point_counter += 1\n",
+    "                    point_id = coordinate_id_map[key]\n",
+    "                    \n",
+    "                    point_list.append({\n",
+    "                        \"ID\": point_id, \n",
+    "                        \"PointType\": row_type[idx],\n",
+    "                        \"Position\": {\"x\": x, \"y\": y},\n",
+    "                        \"GradingRuleID\": -1\n",
+    "                    })\n",
+    "                    idx +=1          \n",
     "        elif row[\"type\"] == \"Straight\":\n",
     "            # Iterate through columns 2 by 2 for x and y\n",
     "            for col_x, col_y in zip(columns_x, columns_y):  # Skip 'type' and go by pairs\n",
@@ -423,7 +530,7 @@
     "    # 첫 번째 정보\n",
     "    first_panel = first_info[\"panel\"]\n",
     "    first_edge = first_info[\"edge\"]\n",
-    "    first_shape_id = f\"{first_panel}_edge_{first_edge}\"\n",
+    "    first_shape_id = f\"{first_panel}\"\n",
     "\n",
     "    # 첫 번째 fStart와 fEnd 추출\n",
     "    first_fstart_fend = next(\n",
