--- a/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
+++ b/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
@@ -92,12 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO:아래에 해당하는 arc_to_bezier는 개구려서 새로 만든거임\n",
     "import numpy as np\n",
+    "import re\n",
     "\n",
     "def arc_to_single_control_bezier(arc):\n",
     "    \"\"\"\n",
@@ -163,7 +164,55 @@
     "        \"end_x\": end_x, \"end_y\": end_y,\n",
     "    }\n",
     "\n",
-    "# # 테스트 데이터\n",
+    "def select_direction_front(fstart_fend):\n",
+    "    edge_str= fstart_fend[\"edge\"]\n",
+    "    pattern = r'start=\\(([^)]+)\\).*end=\\(([^)]+)\\)'\n",
+    "    match = re.search(pattern, edge_str)\n",
+    "    if match:\n",
+    "        start_str = match.group(1)  # \"8.92133247524254+33.21647810564835j\"\n",
+    "        end_str   = match.group(2)  # \"0.7116916666666668+34.66147782685373j\"\n",
+    "        \n",
+    "        # 문자열 -> 복소수 변환\n",
+    "        start_complex = complex(start_str)  # (8.92133247524254+33.21647810564835j)\n",
+    "        end_complex   = complex(end_str)    # (0.7116916666666668+34.66147782685373j)\n",
+    "\n",
+    "        # 실수부, 허수부 분리\n",
+    "        x1 = start_complex.real # start_x\n",
+    "        y1 = start_complex.imag # start_y\n",
+    "        x2   = end_complex.real # end_x\n",
+    "        y2   = end_complex.imag # end_y\n",
+    "\n",
+    "    if (x1 < x2 and y1 < y2) or (x1 > x2 and y1 >= y2) or (x1 == x2 and y1  > y2) :\n",
+    "        return True\n",
+    "    elif (x1 <x2 and y1 >= y2) or (x1 > x2 and y1 < y2) or (x1 == x2 and y1 < y2) :\n",
+    "        return False\n",
+    "\n",
+    "      \n",
+    "\n",
+    "def select_direction_back(fstart_fend):\n",
+    "    edge_str= fstart_fend[\"edge\"]\n",
+    "    pattern = r'start=\\(([^)]+)\\).*end=\\(([^)]+)\\)'\n",
+    "    match = re.search(pattern, edge_str)\n",
+    "    if match:\n",
+    "        start_str = match.group(1)  # \"8.92133247524254+33.21647810564835j\"\n",
+    "        end_str   = match.group(2)  # \"0.7116916666666668+34.66147782685373j\"\n",
+    "        \n",
+    "        # 문자열 -> 복소수 변환\n",
+    "        start_complex = complex(start_str)  # (8.92133247524254+33.21647810564835j)\n",
+    "        end_complex   = complex(end_str)    # (0.7116916666666668+34.66147782685373j)\n",
+    "\n",
+    "        # 실수부, 허수부 분리\n",
+    "        x1 = start_complex.real # start_x\n",
+    "        y1 = start_complex.imag # start_y\n",
+    "        x2   = end_complex.real # end_x\n",
+    "        y2   = end_complex.imag # end_y\n",
+    "\n",
+    "    # back panel stitch edge dirceciton decision 인 경우\n",
+    "    if (x1 < x2 and y1 < y2) or (x1 > x2 and y1 >= y2) or (x1 == x2 and y1  > y2) :\n",
+    "        return False\n",
+    "    elif (x1 <x2 and y1 >= y2) or (x1 > x2 and y1 < y2) or (x1 == x2 and y1 < y2) :\n",
+    "        return True     \n",
+    "# 테스트 데이터\n",
     "# arc_data = {\n",
     "#     \"start_x\": 130.1925,\n",
     "#     \"start_y\": 398.36598,\n",
@@ -174,12 +223,12 @@
     "#     \"sweep\": True,\n",
     "# }\n",
     "\n",
-    "# 변환 실행\n",
-    "bezier_curve_data = arc_to_single_control_bezier(arc_data)\n",
+    "# # 변환 실행\n",
+    "# bezier_curve_data = arc_to_single_control_bezier(arc_data)\n",
     "\n",
-    "# 결과 출력\n",
-    "print(\"Converted Bezier Curve Data:\")\n",
-    "print(bezier_curve_data)"
+    "# # 결과 출력\n",
+    "# print(\"Converted Bezier Curve Data:\")\n",
+    "# print(bezier_curve_data)"
    ]
   },
   {
@@ -262,8 +311,8 @@
     "# 각 panel에 대한 start, end 좌표를 저장해 놓는 함수\n",
     "import math\n",
     "from svgpathtools import Path, Line, QuadraticBezier, CubicBezier, Arc\n",
-    "\n",
-    "def calculate_edge_length(edge):\n",
+    "# TODO: 2024.01.19 15:29 name 추가함.\n",
+    "def calculate_edge_length(edge, name):\n",
     "    \"\"\"\n",
     "    각 엣지의 길이를 계산.\n",
     "    \"\"\"\n",
@@ -278,11 +327,11 @@
     "    else:\n",
     "        raise ValueError(f\"Unsupported edge type: {type(edge)}\")\n",
     "\n",
-    "def calculate_fstart_fend(path):\n",
+    "def calculate_fstart_fend(path, panel_name):\n",
     "    \"\"\"\n",
     "    전체 엣지에 대해 fstart와 fend를 계산.\n",
     "    \"\"\"\n",
-    "    total_length = sum(calculate_edge_length(edge) for edge in path)\n",
+    "    total_length = sum(calculate_edge_length(edge, name) for edge, name in zip(path, panel_name))\n",
     "    fstart = 0.0\n",
     "    results = []\n",
     "\n",
@@ -308,7 +357,7 @@
     "# 각 패널에 대해 fstart, fend 계산\n",
     "for panel_name in panel_list:\n",
     "    path = panel_svg_path_dict[panel_name][0]  # 패널에 해당하는 경로 정보 가져오기\n",
-    "    fstart_fend_results = calculate_fstart_fend(path)\n",
+    "    fstart_fend_results = calculate_fstart_fend(path, panel_name) # TODO: 2024.01.19 14:33 panel_name 넣기\n",
     "    panel_fstart_fend_info[panel_name] = fstart_fend_results  # 결과를 딕셔너리에 저장\n",
     "\n",
     "# panel_fstart_fend_info에 패널 정보, edge, start, end, edge_id 까지 저장 되어있다.\n",
@@ -510,6 +559,26 @@
     "# 2024.01.14 TODO: Seam Line Pair Group json으로 넣는 코드\n",
     "# 2024.01.16 TODO: front , back 에 따라 Pair List의 Direction 결정 넣기\n",
     "# SeamLinePairGroupList 생성\n",
+    "####TODO: 여기부터 내가 임의로 테스트 해봄 2024.01.19 16:16\n",
+    "file_path = '/media/hjp/db6095ca-a560-4c3a-90ad-b667ec189671/REFERENCES/3D_VTO/GarmentCode/GarmentCode/ANALYSIS_josef/nique_panel_names.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# 열 이름 설정\n",
+    "data.columns = ['name']\n",
+    "\n",
+    "# 분류 로직 추가\n",
+    "data['classification'] = data['name'].apply(\n",
+    "    lambda x: 'back' if '_back' in x or '_b' in x or '_btorso' in x else\n",
+    "            'front' if '_front' in x or '_f' in x or '_ftorso' in x else\n",
+    "            'other'\n",
+    ")\n",
+    "\n",
+    "# 각 분류에 따른 리스트 생성\n",
+    "front_list = data[data['classification'] == 'front']['name'].tolist()\n",
+    "back_list = data[data['classification'] == 'back']['name'].tolist()\n",
+    "other_list = data[data['classification'] == 'other']['name'].tolist()    \n",
+    "#### TODO: 여기까지    \n",
+    "\n",
     "garment_data[\"SeamLinePairGroupList\"] = []\n",
     "fabric_group = {\n",
     "    \"FabricName\" : \"Default Fabric\",\n",
@@ -520,13 +589,16 @@
     "    }\n",
     "# SeamLinePairGroupList 생성 루프\n",
     "for idx, value in enumerate(stitch_dict.values()):\n",
+    "    \n",
+    "\n",
+    "    \n",
     "    # \"Name\" 생성\n",
     "    group_name = f\"SeamLineGroup_{idx}\"\n",
     "\n",
     "    # value에서 첫 번째와 두 번째 ShapeID 정보 추출\n",
     "    first_info = value[0]\n",
     "    second_info = value[1]\n",
-    "\n",
+    "        \n",
     "    # 첫 번째 정보\n",
     "    first_panel = first_info[\"panel\"]\n",
     "    first_edge = first_info[\"edge\"]\n",
@@ -539,8 +611,19 @@
     "    )\n",
     "    first_fstart = first_fstart_fend[\"fstart\"]\n",
     "    first_fend = first_fstart_fend[\"fend\"]\n",
-    "    # TODO 2024.01.16 15:09 direeciton 넣기\n",
-    "    # first_direction\n",
+    "    first_point= first_fstart_fend[\"edge\"]\n",
+    "\n",
+    "    if first_panel in front_list:\n",
+    "        first_direction = select_direction_front(first_fstart_fend)\n",
+    "    elif first_panel in back_list:\n",
+    "        first_direction = select_direction_back(first_fstart_fend)\n",
+    "    else:\n",
+    "        first_direction = False\n",
+    "    \n",
+    "    print(first_direction)\n",
+    "    if first_direction == False:\n",
+    "        first_fstart, first_fend = first_fstart_fend[\"fend\"], first_fstart_fend[\"fstart\"]\n",
+    "        \n",
     "    # 두 번째 정보\n",
     "    second_panel = second_info[\"panel\"]\n",
     "    second_edge = second_info[\"edge\"]\n",
@@ -553,8 +636,19 @@
     "    )\n",
     "    second_fstart = second_fstart_fend[\"fstart\"]\n",
     "    second_fend = second_fstart_fend[\"fend\"]\n",
-    "    # Fabric default 구조 생성\n",
+    "    second_point = second_fstart_fend[\"edge\"]\n",
+    "    # TODO 2024.01.19 14:30 direeciton 넣기 \n",
+    "    \n",
+    "    if second_panel in front_list:\n",
+    "        second_direction = select_direction_front(second_fstart_fend)\n",
+    "    elif second_panel in back_list:\n",
+    "        second_direction = select_direction_back(second_fstart_fend)\n",
+    "    else:\n",
+    "        second_direction = False\n",
     "\n",
+    "    if second_direction == False:\n",
+    "        second_fstart, second_fend = second_fstart_fend[\"fend\"], second_fstart_fend[\"fstart\"]\n",
+    "        \n",
     "    # JSON 구조 생성\n",
     "    seam_line_pair_group = {\n",
     "        \"Name\": group_name,\n",
@@ -567,7 +661,7 @@
     "                        \"fStart\": first_fstart,\n",
     "                        \"fEnd\": first_fend\n",
     "                    },\n",
-    "                    \"Direction\": True\n",
+    "                    \"Direction\": first_direction\n",
     "                },\n",
     "                \"Second\": {\n",
     "                    \"ShapeID\": second_shape_id,\n",
@@ -575,7 +669,7 @@
     "                        \"fStart\": second_fstart,\n",
     "                        \"fEnd\": second_fend\n",
     "                    },\n",
-    "                    \"Direction\": True # TODO True로 일단 default\n",
+    "                    \"Direction\": second_direction # TODO True로 일단 default\n",
     "                }\n",
     "            }\n",
     "        ],\n",
