--- a/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
+++ b/ANALYSIS_josef/REAL_JSON_MAKE.ipynb
@@ -78,6 +78,7 @@
     "            df[f\"{col}_y\"] = (stand_y - df[f\"{col}_y\"]) * 10 #TODO: 01.17 scaling까지 \n",
     "            df[f\"{col}_x\"] = df[f\"{col}_x\"]* 10 #TODO: scaling까지 \n",
     "        df['controlb_x'] = df['controla_x'].round(4) # TODO: ontrolb_x 에 round\n",
+    "        \n",
     "        # TODO: 여기까지\n",
     "        return df\n",
     "    \n",
@@ -299,6 +300,117 @@
     "#         \"control2_x\": P2_x.real, \"control2_y\": P2_y.real,\n",
     "#         \"end_x\": P3_x, \"end_y\": P3_y,\n",
     "#     }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3차원으로 변환\n",
+    "import numpy as np\n",
+    "\n",
+    "def euler_to_rotation_matrix(rx_deg, ry_deg, rz_deg):\n",
+    "    \"\"\"\n",
+    "    Rx, Ry, Rz (degree) 오일러 각을 받아서\n",
+    "    X축 -> Y축 -> Z축 순서로 회전하는 3x3 회전 행렬을 반환.\n",
+    "    \"\"\"\n",
+    "    # 각도를 radian으로 변환\n",
+    "    rx = np.deg2rad(rx_deg)\n",
+    "    ry = np.deg2rad(ry_deg)\n",
+    "    rz = np.deg2rad(rz_deg)\n",
+    "\n",
+    "    # 회전 행렬 구성\n",
+    "\n",
+    "    # 1) X축 회전 행렬\n",
+    "    Rx = np.array([\n",
+    "        [1,          0,           0],\n",
+    "        [0,  np.cos(rx), -np.sin(rx)],\n",
+    "        [0,  np.sin(rx),  np.cos(rx)]\n",
+    "    ])\n",
+    "\n",
+    "    # 2) Y축 회전 행렬\n",
+    "    Ry = np.array([\n",
+    "        [ np.cos(ry), 0, np.sin(ry)],\n",
+    "        [          0, 1,          0],\n",
+    "        [-np.sin(ry), 0, np.cos(ry)]\n",
+    "    ])\n",
+    "\n",
+    "    # 3) Z축 회전 행렬\n",
+    "    Rz = np.array([\n",
+    "        [np.cos(rz), -np.sin(rz), 0],\n",
+    "        [np.sin(rz),  np.cos(rz), 0],\n",
+    "        [         0,           0, 1]\n",
+    "    ])\n",
+    "\n",
+    "    # 순서: X축 회전 -> Y축 회전 -> Z축 회전 (Intrinsic)\n",
+    "    # 최종 회전 행렬 = Rz * Ry * Rx (행렬 곱 순서 유의)\n",
+    "    R = Rz @ Ry @ Rx\n",
+    "\n",
+    "    return R\n",
+    "\n",
+    "def transform_2d_points_to_3d(points_2d, translation, rotation):\n",
+    "    \"\"\"\n",
+    "    2D 좌표 리스트(points_2d)를 rotation, translation 정보를 사용해\n",
+    "    3D 좌표로 변환.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    points_2d : list of (x, y)\n",
+    "        변환 대상 2D 좌표들\n",
+    "    translation : list or tuple\n",
+    "        [Tx, Ty, Tz] 형태\n",
+    "    rotation : list or tuple\n",
+    "        [Rx_deg, Ry_deg, Rz_deg] 형태 (도 단위)\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    transformed_points_3d : np.ndarray\n",
+    "        변환된 3D 좌표 (N x 3)\n",
+    "    \"\"\"\n",
+    "    # 1) 2D -> 3D로 확장 (z=0 가정)\n",
+    "    points_3d = np.array([[x, y, 0.0] for (x, y) in points_2d])\n",
+    "\n",
+    "    # 2) 오일러 각 -> 회전 행렬\n",
+    "    Rx_deg, Ry_deg, Rz_deg = rotation\n",
+    "    R = euler_to_rotation_matrix(Rx_deg, Ry_deg, Rz_deg)\n",
+    "\n",
+    "    # 3) 회전 적용\n",
+    "    # 행렬 곱: (N x 3) · (3 x 3) = (N x 3)\n",
+    "    points_rotated = points_3d @ R.T\n",
+    "\n",
+    "    # 4) 평행이동 적용\n",
+    "    Tx, Ty, Tz = translation\n",
+    "    points_translated = points_rotated + np.array([Tx, Ty, Tz])\n",
+    "\n",
+    "    return points_translated\n",
+    "\n",
+    "\n",
+    "data_dict = {\n",
+    "    \"pattern\": {\n",
+    "        \"panels\": {\n",
+    "            \"skirt_front_0\": {\n",
+    "                \"translation\": [-13.1197528, -15.0477905, 25.0],\n",
+    "                \"rotation\": [0.0, 0.0, 29.0]\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# 변환 대상 2D 좌표 예시\n",
+    "points_2d = [(0, 0), (10, 0), (0, 10), (10,10)]\n",
+    "\n",
+    "# 딕셔너리에서 translation, rotation 읽어오기\n",
+    "panel_data = data_dict[\"pattern\"][\"panels\"][\"skirt_front_0\"]\n",
+    "translation = panel_data[\"translation\"]   # [Tx, Ty, Tz]\n",
+    "rotation = panel_data[\"rotation\"]         # [Rx, Ry, Rz] (deg)\n",
+    "\n",
+    "# 변환\n",
+    "transformed_points_3d = transform_2d_points_to_3d(points_2d, translation, rotation)\n",
+    "\n",
+    "print(\"변환된 3D 좌표:\")\n",
+    "print(transformed_points_3d)"
    ]
   },
   {
